Initial Dalan commit

--- a/cenario-steam/cenario-steam.tex
+++ b/cenario-steam/cenario-steam.tex
@@ -1,4 +1,4 @@
-% Últimas modificações: 07 Mar 2003
+% Ultimas modificacoes: 07 Mar 2003
 %\documentclass[a4paper,11pt, titlepage, openany]{book}
 \documentclass[twocolumn,a4paper,11pt, titlepage, openany]{book}
 %-----------------------------------------------------------
@@ -15,7 +15,7 @@
 
 \begin{document}
 
-% Faça-se o título!   ;-)
+% Faï¿½a-se o tï¿½tulo!   ;-)
 \title{Dark Pipes - Cen\'ario de Campanha}
 
 \author{Escrito por Fernando Favini}
