Add dalan information

--- a/cenario-steam/reinos/dalan.tex
+++ b/cenario-steam/reinos/dalan.tex
@@ -9,14 +9,15 @@
    \item[Exporta]
    \item[Alinhamentos]
   \end{description}
-\subsubsection{Descri\c{c}\~ao}
+
+\subsection{Descri\c{c}\~ao}
 
 O reino de Dalan foi fundado quando os antigos abitantes de Krater sairam de sua
 terra durante a invas\~{a}o Tontut, encontrando ref\'ugio nas ilhas ao Sul onde
 foram capazes de acolher diversos fugitivos gerando uma nova sociedade.
 
-\section{Hist\'oria}
-
+\subsection{Hist\'oria}
+\subsubsection{Primeiras Colonias}
 Ap\'os a ressurei\c{c}\~ao toda a regi\~ao ao redor do deserto, os Tontut expulsaram
 um grande n\'umero de habitantes, e aqueles que n\~ao foram expulsos tiveram de lutar
 por suas vidas
@@ -24,7 +25,11 @@ por suas vidas
 Os Kratorianos rapidamente se estabeleceram como os regentes das ilhas de Dalan e
 levaram consigo o grande Krupt Harley que auxilio na recria\c{c}\~ao da sociedade.
 
+\subsubsection{P\'os Guerra}
 Os novos dalanianos replicaram a sociedade tecnol\'ogica de Krater e utilizaram suas
-industrias para crescimento e estabelecimento
+industrias para crescimento comercial, e militar.
 
+Ap\'os o fim da grande guerra, Dalan se estabeleceu fazendo com\'ercio com os reinos
+destruidos crescendo de forma ca\'otica conforme as oportunidades e imigrandes
+se concentravam.
 
